--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -36,37 +36,8 @@
     --line-height: 1.5;
 }
 
-/* FONTS */
-    @font-face {
-     font-family: "Montserrat";
-     /* styles.css lives in client/css/, fonts are in client/assets/fonts/ -> use ../assets/... */
-     src: url('../assets/fonts/Montserrat-Light.ttf') format("truetype");
-     font-style: normal;
-     font-display: swap;
-     font-weight: 300;
-    }
-    @font-face {
-     font-family: "Merriweather";
-     src: url('../assets/fonts/Merriweather_24pt-ExtraBold.ttf') format("truetype");
-     /* this is an ExtraBold file: use normal style and a bold weight */
-     font-style: normal;
-     font-display: swap;
-     font-weight: 800;
-    }
-    @font-face {
-     font-family: "Poppins";
-     src: url('../assets/fonts/Poppins-Medium.ttf') format("truetype");
-     font-style: normal;
-     font-display: swap;
-     font-weight: 500;
-    }
-    @font-face {
-     font-family: "Roboto";
-     src: url('../assets/fonts/Roboto_Condensed-Medium.ttf') format("truetype");
-     font-style: normal;
-     font-display: swap;
-     font-weight: 500;
-    }
+/* FONTS (served from Google Fonts CDN) */
+/* Fonts are loaded via the Google Fonts link in index.html. */
 
 body {
     font-family: "Montserrat", Arial, sans-serif;
